# internal/payee/api/routes.go
@@ -19,6 +19,7 @@ func RegisterAPI(h *Handlers, authn middleware.TokenAuthenticator, dev bool) rou
 		mux.Handle("POST /api/v1/payee/unarchive-payee", auth(h.UnarchivePayee))
 		mux.Handle("POST /api/v1/payee/delete-payee", auth(h.DeletePayee))
 		mux.Handle("POST /api/v1/payee/order-payee-list", auth(h.OrderPayeeList))
+		mux.Handle("POST /api/v1/payee/sort-payee-list", auth(h.SortPayeeList))
 		mux.Handle("GET /api/v1/payee/get-payee-list", auth(h.GetPayeeList))
 	}
 }
